--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,33 @@
     ]
   },
   {
+    "title": "Nữ sinh lớp 6 đánh bạn bị đình chỉ học 4 tuần",
+    "content": "Trường THCS Ma Lâm ở Bình Thuận đã ra quyết định tạm đình chỉ học 4 tuần đối với nữ sinh N.T.B.N. (13 tuổi) do đã đánh bạn cùng lớp. Vụ việc xảy ra khi N.T.B.N. cho rằng bạn L.L.Đ. nói xấu mình, dẫn đến việc N. đã xông vào lớp và hành hung L. ngay trong trường. Sau sự việc, nhà trường đã có buổi làm việc với gia đình hai học sinh để giải quyết và nhận lỗi về sự quản lý học sinh.",
+    "link": "https://dantri.com.vn/giao-duc/nu-sinh-lop-6-danh-ban-bi-dinh-chi-hoc-4-tuan-20250311164714503.htm",
+    "cat": "giao-duc",
+    "positivity": 3,
+    "importance": 6,
+    "question": "Tại sao nữ sinh lớp 6 N.T.B.N. bị đình chỉ học 4 tuần?",
+    "answers": [
+      {
+        "text": "Vì đã đánh bạn trong trường",
+        "correct": true
+      },
+      {
+        "text": "Vì không làm bài tập về nhà",
+        "correct": false
+      },
+      {
+        "text": "Vì đi học muộn",
+        "correct": false
+      },
+      {
+        "text": "Vì nói xấu bạn khác",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phú Yên diễu hành motobike, Bình Định mở tour du lịch tàu hỏa",
     "content": "Phú Yên và Bình Định vừa tổ chức hai sự kiện nhằm thúc đẩy du lịch. Tại Phú Yên, sự kiện diễu hành xe mô tô lần đầu tiên sẽ diễn ra từ ngày 21 đến 22-3, thu hút hàng trăm tay lái trong và ngoài nước. Trong khi đó, Bình Định sẽ mở các chuyến tàu charter miễn phí cho du khách từ TP.HCM, Hà Nội và Đà Nẵng, nhằm khuyến khích du lịch trong khu vực.",
     "link": "https://tuoitre.vn/phu-yen-dieu-hanh-motobike-binh-dinh-mo-tour-du-lich-tau-hoa-20250311155946835.htm",
@@ -3598,28 +3625,32 @@
     ]
   },
   {
-    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
-    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
-    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
-    "cat": "oto-xe-may",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
+    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
+    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
     "answers": [
       {
-        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
         "correct": true
       },
       {
-        "text": "Để tiết kiệm nhiên liệu.",
+        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
         "correct": false
       },
       {
-        "text": "Để tăng tốc độ di chuyển.",
+        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
         "correct": false
       },
       {
-        "text": "Để giảm tiếng ồn khi lái xe.",
+        "text": "Tập trung vào việc học các công nghệ mới",
+        "correct": false
+      },
+      {
+        "text": "Không cần lo lắng về sự phát triển của AI",
         "correct": false
       }
     ]
@@ -3656,32 +3687,28 @@
     ]
   },
   {
-    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
-    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
-    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
+    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
+    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
+    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
+    "cat": "oto-xe-may",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
     "answers": [
       {
-        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
+        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
         "correct": true
       },
       {
-        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
+        "text": "Để tiết kiệm nhiên liệu.",
         "correct": false
       },
       {
-        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
+        "text": "Để tăng tốc độ di chuyển.",
         "correct": false
       },
       {
-        "text": "Tập trung vào việc học các công nghệ mới",
-        "correct": false
-      },
-      {
-        "text": "Không cần lo lắng về sự phát triển của AI",
+        "text": "Để giảm tiếng ồn khi lái xe.",
         "correct": false
       }
     ]
@@ -4004,33 +4031,6 @@
     ]
   },
   {
-    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
-    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
-    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
-    "answers": [
-      {
-        "text": "2.500",
-        "correct": true
-      },
-      {
-        "text": "10.000",
-        "correct": false
-      },
-      {
-        "text": "8.500",
-        "correct": false
-      },
-      {
-        "text": "5.000",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cả nước dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
     "content": "Phó thủ tướng Nguyễn Hòa Bình cho biết cả nước dự kiến sẽ giảm số lượng đơn vị hành chính cấp xã từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc này dự kiến sẽ hoàn thành vào tháng 6 tới, với các tiêu chí sẽ được Trung ương ban hành để các địa phương lập phương án sắp xếp. Chất lượng cán bộ cấp xã cũng sẽ được nâng cao, nhằm tăng cường hiệu quả quản lý.",
     "link": "https://vnexpress.net/ca-nuoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
@@ -4057,6 +4057,33 @@
       },
       {
         "text": "3.500",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
+    "answers": [
+      {
+        "text": "2.500",
+        "correct": true
+      },
+      {
+        "text": "10.000",
+        "correct": false
+      },
+      {
+        "text": "8.500",
+        "correct": false
+      },
+      {
+        "text": "5.000",
         "correct": false
       }
     ]
@@ -4317,33 +4344,6 @@
     ]
   },
   {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -4370,6 +4370,33 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
@@ -4433,33 +4460,6 @@
     ]
   },
   {
-    "title": "Vì sao gọi là bệnh ho gà?",
-    "content": "Bệnh ho gà là một bệnh nhiễm trùng đường hô hấp do vi khuẩn Bordetella Pertussis gây ra, thường gặp ở trẻ nhỏ với đặc trưng là các cơn ho kéo dài kèm theo tiếng rít giống như tiếng gà gáy. Bệnh có thể gây ra nhiều biến chứng nghiêm trọng nếu không được điều trị kịp thời, bao gồm viêm phổi và có thể dẫn đến tử vong. Để phòng ngừa ho gà, tiêm vaccine là biện pháp hiệu quả nhất, với nhiều loại vaccine khác nhau phù hợp cho trẻ em và người lớn.",
-    "link": "https://vnexpress.net/vi-sao-goi-la-benh-ho-ga-4859217.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Vì sao ho gà lại có tên gọi như vậy?",
-    "answers": [
-      {
-        "text": "Vì bệnh gây ra những cơn ho kéo dài với tiếng rít giống như tiếng gà gáy.",
-        "correct": true
-      },
-      {
-        "text": "Bệnh này do virus gây ra.",
-        "correct": false
-      },
-      {
-        "text": "Bệnh chỉ xảy ra ở người lớn.",
-        "correct": false
-      },
-      {
-        "text": "Ho gà là tên một loại thuốc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Uống gì giảm nguy cơ sỏi thận?",
     "content": "Để giảm nguy cơ sỏi thận, việc uống đủ nước, khoảng hai lít mỗi ngày, là rất quan trọng. Ngoài ra, việc tiêu thụ cà phê vừa phải, trà thảo mộc và các loại nước uống không chứa calo cũng giúp giảm nguy cơ sỏi thận. Cà phê có thể giảm nguy cơ đến 40% nếu tăng lượng tiêu thụ, trong khi trà xanh và sinh tố ít đường cũng có lợi cho sức khỏe thận. Tuy nhiên, cần lưu ý lượng đường và các chất trong nước ép trái cây để tránh tác động xấu đến sức khỏe.",
     "link": "https://vnexpress.net/uong-gi-giam-nguy-co-soi-than-4859161.html",
@@ -4486,6 +4486,33 @@
       },
       {
         "text": "Uống nước trái cây có đường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao gọi là bệnh ho gà?",
+    "content": "Bệnh ho gà là một bệnh nhiễm trùng đường hô hấp do vi khuẩn Bordetella Pertussis gây ra, thường gặp ở trẻ nhỏ với đặc trưng là các cơn ho kéo dài kèm theo tiếng rít giống như tiếng gà gáy. Bệnh có thể gây ra nhiều biến chứng nghiêm trọng nếu không được điều trị kịp thời, bao gồm viêm phổi và có thể dẫn đến tử vong. Để phòng ngừa ho gà, tiêm vaccine là biện pháp hiệu quả nhất, với nhiều loại vaccine khác nhau phù hợp cho trẻ em và người lớn.",
+    "link": "https://vnexpress.net/vi-sao-goi-la-benh-ho-ga-4859217.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Vì sao ho gà lại có tên gọi như vậy?",
+    "answers": [
+      {
+        "text": "Vì bệnh gây ra những cơn ho kéo dài với tiếng rít giống như tiếng gà gáy.",
+        "correct": true
+      },
+      {
+        "text": "Bệnh này do virus gây ra.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh chỉ xảy ra ở người lớn.",
+        "correct": false
+      },
+      {
+        "text": "Ho gà là tên một loại thuốc.",
         "correct": false
       }
     ]
@@ -4718,33 +4745,6 @@
       },
       {
         "text": "món ăn truyền thống",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Làm méo miệng, sái quai hàm khách, 7 người ở thẩm mỹ viện Gangwhoo bị khởi tố",
-    "content": "Ngày 10-3, Công an tỉnh Thanh Hóa đã khởi tố 7 người liên quan đến vụ việc tại thẩm mỹ viện Gangwhoo, nơi khách hàng đã bị làm méo miệng và sái quai hàm do các dịch vụ không đảm bảo. Những người này, bao gồm cả chủ thẩm mỹ viện, đã bị cáo buộc lừa dối khách hàng bằng cách thực hiện các thủ thuật thẩm mỹ mà không có giấy phép và chuyên môn. Cơ quan điều tra đang tiếp tục tìm kiếm nạn nhân để giải quyết vụ việc.",
-    "link": "https://tuoitre.vn/lam-meo-mieng-sai-quai-ham-khach-7-nguoi-o-tham-my-vien-gangwhoo-bi-khoi-to-20250310164407807.htm",
-    "cat": "phap-luat",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Vụ thẩm mỹ viện Gangwhoo đã xảy ra vấn đề gì nghiêm trọng?",
-    "answers": [
-      {
-        "text": "Khách hàng bị méo miệng và sái quai hàm",
-        "correct": true
-      },
-      {
-        "text": "Thẩm mỹ viện hoạt động hợp pháp",
-        "correct": false
-      },
-      {
-        "text": "Khách hàng hài lòng với dịch vụ",
-        "correct": false
-      },
-      {
-        "text": "Không có nạn nhân nào",
         "correct": false
       }
     ]
